--- a/resources/js/components/ChatPage/ChatPage.scss
+++ b/resources/js/components/ChatPage/ChatPage.scss
@@ -22,6 +22,10 @@
     .container {
         max-width: 1100px;
         width: 90%;
+        background-color: var(--color-secondary);
+        border-radius: 15px;
+        box-shadow: 0px 0px 2px 0px var(--color-secondary-light);
+        padding: 0;
 
         .content {
             display: flex;
@@ -38,7 +42,9 @@
         max-height: 500px;
         overflow-y: hidden;
         padding: 20px;
-        margin-bottom: 10px;
+        background-color: #222222;
+        border-radius: 15px;
+        margin: 5px;
 
         .messages_list {
             overflow-y: scroll;
