--- a/resources/js/components/Navbar/Navbar.scss
+++ b/resources/js/components/Navbar/Navbar.scss
@@ -1,6 +1,5 @@
 .navbar_custom {
-    box-shadow: 0 2px 2px -2px var(--color-secondary-light);
-    padding: 10px;
+    padding: 10px 20px 10px 20px;
     display: flex;
     justify-content: space-between;
 
@@ -15,6 +14,7 @@
             font-size: var(--font-size-sm);
             font-weight: var(--font-weight-bold);
             display: block;
+            color: var(--color-primary);
         }
     }
 
