--- a/resources/js/components/NoChatSelected/NoChatSelected.scss
+++ b/resources/js/components/NoChatSelected/NoChatSelected.scss
@@ -15,6 +15,23 @@
         justify-content: center;
         align-items: center;
         margin-bottom: 25px;
+        animation: bounce 2s infinite;
+    }
+
+    @keyframes bounce {
+        0%,
+        20%,
+        50%,
+        80%,
+        100% {
+            transform: translateY(0);
+        }
+        40% {
+            transform: translateY(-20px);
+        }
+        60% {
+            transform: translateY(-15px);
+        }
     }
 
     .title {
