--- a/resources/js/components/Sidebar/Sidebar.scss
+++ b/resources/js/components/Sidebar/Sidebar.scss
@@ -3,9 +3,9 @@
     max-height: 500px;
     width: 100%;
     height: 100vh;
-    padding: 10px;
     display: flex;
     flex-direction: column;
     gap: 10px;
     overflow-y: scroll;
+    padding-left: 10px;
 }
