--- a/resources/js/components/ChatPage/ChatPage.scss
+++ b/resources/js/components/ChatPage/ChatPage.scss
@@ -34,7 +34,7 @@
     }
 
     .main {
-        width: 900px;
+        width: 100%;
         display: flex;
         flex-direction: column;
         gap: 10px;
